DOM-manipulated quote generator

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -12,7 +12,7 @@
   <div id="quoteDisplay"></div>
 
   <!-- Show Random Quote Button -->
-  <button id="newQuote">Show New Quote</button>
+  <button id="newQuote" onclick="showRandomQuote()">Show New Quote</button>
 
   <!-- Add New Quote Section -->
   <div>
