DOM-manipulated quote generator

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -14,12 +14,7 @@
   <!-- Show Random Quote Button -->
   <button id="newQuote" onclick="showRandomQuote()">Show New Quote</button>
 
-  <!-- Add New Quote Section -->
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote">
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category">
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
+  <!-- The Add Quote form will be created dynamically -->
 
   <script src="script.js"></script>
 </body>
