--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -18,8 +18,8 @@
 
   <!-- Category Filter -->
   <div id="category-filter">
-    <label for="category-select">Filter by Category:</label>
-    <select id="category-select">
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter">
       <option value="all">All</option>
     </select>
   </div>
@@ -27,4 +27,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
