feat: implement category filter with localStorage persistence

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,17 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quote Generator</title>
+  <title>Dynamic Quote Generator</title>
 </head>
 <body>
-  <div>
-    <p id="quoteDisplay">Your quote will appear here</p>
-    <button id="new-quote">New Quote</button>
-  </div>
+  <h1>Dynamic Quote Generator</h1>
 
+  <!-- Quote Display -->
+  <div id="quoteDisplay"></div>
+
+  <!-- Show Random Quote Button -->
+  <button id="newQuote" onclick="showRandomQuote()">Show New Quote</button>
+
+  <!-- Add Quote Form will be created dynamically -->
+
+  <!-- Import/Export Controls -->
   <div>
-    <label for="category">Filter by Category:</label>
-    <select id="category"></select>
+    <button onclick="exportToJsonFile()">Export Quotes</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)">
   </div>
 
   <script src="script.js"></script>
