Added createAddQuoteForm function and updated DOM logic

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,6 +8,13 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <!-- Category Filter -->
+  <label for="categoryFilter">Filter by category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+    <!-- Categories will be added dynamically -->
+  </select>
+
   <!-- Quote Display -->
   <div id="quoteDisplay"></div>
 
